# BrainTumorDetection

./: .gitignore  dicom_transformer.py  doctors_view.html  image.dcm  index.html  main.py  model.py  models.py  pipeline.py  pyproject.toml  transform.py
braintumorsegmentation/: db_utils.py  dummy_patients_test.py  main.py  model.py  models.py  pipeline.py  transform.py  utils.py
braintumorsegmentation/tests/: dummy_patients_test.py
front/: index.html  rest_logic.py
tests/: dummy_patients_test.py
